<resources>
    <string name="app_name">MPDX</string>
    <string name="dashboard">Dashboard</string>
    <string name="tasks">Tasks</string>
    <string name="contacts">Contacts</string>
    <string name="donations">Donations</string>
    <string name="appeals">Appeals</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="dashboard_lowercase">dashboard</string>
    <string name="donations_lowercase">donations</string>
    <string name="contacts_lowercase">contacts</string>
    <string name="tasks_lowercase">tasks</string>
    <string name="appeals_lowercase">appeals</string>
    <string name="dashboard_overall_goal">%1$sGoal</string>
    <string name="dashboard_account_label">My account balance</string>
    <string name="connect_lowercase">connect</string>
    <string name="care_commitments_lowercase">care &amp; commitments</string>
    <string name="current_tasks_lowercase">current tasks</string>
    <string name="task_history_lowercase">task history</string>
    <string name="contact_name_unavailable">Contact Name Unavailable</string>
    <string name="no_contacts">No Contacts</string>
    <string name="multiple_contacts">Multiple Contacts</string>
    <string name="deleted">deleted</string>
    <string name="overdue">OVERDUE</string>
    <string name="today">TODAY</string>
    <string name="tomorrow">TOMORROW</string>
    <string name="upcoming">UPCOMING</string>
    <string name="no_due_date">NO DUE DATE</string>
    <string name="none">none</string>
    <string name="add">add</string>
    <string name="task_subject_hint">enter a task subject</string>
    <string name="no_subject_description">%1$s %2$s</string>
    <string name="task_detail">TASK DETAIL</string>
    <string name="select_contact_hint">contact</string>
    <string name="select_user_hint">user</string>
    <string name="date_hint">date</string>
    <string name="edit">edit</string>
    <string name="comments">COMMENTS</string>
    <string name="tags">TAGS</string>
    <string name="alert">alert</string>
    <string name="alert_definition_title">How do you want to be notified?</string>
    <string name="hours_label">Hours:</string>
    <string name="minutes_label">Minutes:</string>
    <string name="mode_label">Mode:</string>
    <string name="alert_mode_none">None</string>
    <string name="alert_mode_email">Email</string>
    <string name="alert_mode_mobile">Mobile</string>
    <string name="alert_mode_both">Both</string>
    <plurals name="hours_unit">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="minutes_unit">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="alert_status_text">%s before</string>
    <string name="alert_no_status">No notification set</string>
    <string name="alert_grouped">%s and %d more</string>
    <string name="hour_minute_mix">%dhr %dmin</string>
    <string name="due_date">DUE DATE</string>
    <string name="completed_on">COMPLETED ON</string>
    <string name="completed_task_result_title">RESULT</string>
    <string name="call">call</string>
    <string name="text">text</string>
    <string name="directions">directions</string>
    <string name="todo">to do</string>
    <string name="talk_to_in_person">talk to in person</string>
    <string name="no_action_set">no action set</string>
    <string name="letter">letter</string>
    <string name="newsletter_physical">newsletter - physical</string>
    <string name="newsletter_email">newsletter - email</string>
    <string name="pre_call_letter">pre call letter</string>
    <string name="reminder_letter">reminder letter</string>
    <string name="support_letter">support letter</string>
    <string name="thank">thank</string>
    <string name="prayer_request">prayer request</string>
    <string name="appointment">appointment</string>
    <string name="text_message">text message</string>
    <string name="facebook_message">facebook message</string>
    <string name="email">email</string>
    <string name="complete">complete</string>
    <string name="delete">delete</string>
    <string name="info">info</string>
    <string name="notes">notes</string>
    <string name="contacts_edit">edit</string>
    <string name="notes_save">save note</string>
    <string name="notes_canceled">Notes Canceled</string>
    <string name="notes_cancel">Cancel</string>
    <string name="task_deleted">Task deleted</string>
    <string name="task_completed">Task completed</string>
    <string name="no_phone_numbers">No phone numbers available</string>
    <string name="no_email_addresses">No email addresses available</string>
    <string name="no_facebook_accounts">No Facebook Accounts available</string>
    <string name="select_facebook_account">Select a Facebook Account</string>
    <string name="no_email_client_found">No email client found</string>
    <string name="task_added">Task added</string>
    <string name="task_logged">Task logged</string>
    <string name="no_tags">No tags available</string>
    <string name="time_without_date">Please select a due date</string>
    <string name="save">save</string>
    <string name="task_edited">Task saved</string>
    <string name="task_completed_error">Your task was completed locally and will be synchronized later</string>
    <string name="tasks_view_all">view all</string>
    <string name="tasks_empty">No completed tasks could be loaded.</string>
    <string name="task_count_text">Total Tasks: %1$d</string>
    <string name="task_save_error_message">The task was not successfully saved</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search by name</string>
    <string name="people">people</string>
    <string name="return_to_app_title">You left MPDX to <i>%1$s</i> <b>%2$s</b>. Tap OK to log that action</string>
    <string name="return_to_app_add_info">Add Info</string>
    <string name="result_attempted_left_message">Attempted - Left Message</string>
    <string name="result_attempted">Attempted</string>
    <string name="result_completed">Completed</string>
    <string name="result_appointment_scheduled">Appointment Scheduled</string>
    <string name="contact_associated_tasks">ASSOCIATED TASKS</string>
    <string name="contact_view_task_history">view task history</string>
    <string name="contact_new_task">new task</string>
    <string name="contact_view_members">MEMBERS OF HOUSEHOLD</string>
    <string name="contact_view_envelope_name">Envelope name</string>
    <string name="contact_view_greeting">Greeting</string>
    <string name="contact_view_primary_address">Primary address</string>
    <string name="contact_view_newsletter">Newsletter</string>
    <string name="contact_view_partner_accounts">Partner Accounts</string>
    <string name="contact_view_email">Email</string>
    <string name="contact_no_email">No email addresses found</string>
    <string name="contact_no_phone_number">No phone numbers found</string>
    <string name="contact_count_text">Total Contacts: %1$d</string>
    <string name="call_or_text">Call or Text Message</string>
    <string name="call_or_text_number">Call or text mobile number %1$s?</string>
    <string name="donation_view_donation_salary">Salary Currency</string>
    <string name="donation_view_tendered_salary">Donation Currency</string>
    <string name="donation_add_title">Add Donation</string>
    <string name="donation_edit_title">View/Edit Donation</string>
    <string name="donation_add_donation_details_header">Donation Details</string>
    <string name="donation_add_donation_details_amount_hint">donation amount</string>
    <string name="donation_add_donation_details_currency">currency - %1$s</string>
    <string name="donation_add_donation_details_currency_select">select a currency</string>
    <string name="donation_add_donation_details_select_donor">select donor (required)</string>
    <string name="donation_add_donation_date_header">Date of Donation</string>
    <string name="donation_add_donation_date_hint">select date</string>
    <string name="donation_add_donation_appeal_header">Appeal (Optional)</string>
    <string name="donation_add_donation_appeal_type_hint">appeal</string>
    <string name="donation_add_donation_appeal_select">Select an Appeal</string>
    <string name="donation_add_donation_appeal_amount_hint">appeal amount (leave blank for full amount)</string>
    <string name="donation_add_donation_designation_header">Designation (Required)</string>
    <string name="donation_add_donation_designation_select">Select Designation Account</string>
    <string name="donation_add_donation_designation_hint">select account</string>
    <string name="donation_add_donation_memo_header">Memo (Optional)</string>
    <string name="donation_add_donation_memo_hint">Add a Memo</string>
    <string name="donation_saved">Donation saved!</string>
    <string name="add_donation_no_amount">Please enter an amount</string>
    <string name="add_donation_no_currency">Please select a currency</string>
    <string name="add_donation_no_date">Please select a date</string>
    <string name="add_donation_no_donor">Please select a donor</string>
    <string name="add_donation_no_designation">Please select a designation</string>
    <string name="add_donation_error">Your donation was saved locally and will be synchronized later</string>
    <string name="donation_count_text">Total Donations: %1$,.2f %2$s</string>
    <string name="contact_my_notes">MY NOTES</string>
    <string name="contact_view_more_donations">view more donations</string>
    <string name="contact_donation_error">The donation(s) you selected is invalid</string>
    <string name="contact_no_donation_date">Date Unavailable</string>
    <string name="donations_last_gifts">LAST %d GIFTS</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="fingerprint_skip">skip</string>
    <string name="overdue_or_due_today">OVERDUE OR DUE TODAY</string>
    <string name="commitments_unfulfilled">COMMITMENTS UNFULFILLED</string>
    <string name="care">CARE</string>
    <string name="filter">Filter</string>
    <string name="filter_contact_status">Contact Status</string>
    <string name="filter_action_type">Action Type</string>
    <string name="filter_contact_referrer">Contact Referrer</string>
    <string name="filter_contact_church">Contact Church</string>
    <string name="filter_contact_likely_to_give">Contact Likely to Give</string>
    <string name="filter_contact_timezone">Contact Timezone</string>
    <string name="filter_task_contact_city">Contact City</string>
    <string name="filter_task_contact_state">Contact State</string>
    <string name="filter_task_tags">Tags</string>
    <string name="filter_notification_types">Notification Type</string>
    <string name="toolbar_filter_tasks">filter tasks</string>
    <string name="confirm_pin">confirm pin</string>
    <string name="add_commitment_title">add a commitment</string>
    <string name="add_commitment_contact_header">CONTACT (Required)</string>
    <string name="add_commitment_expected_date_header">EXPECTED DATE (Required)</string>
    <string name="add_commitment_received_header">received</string>
    <string name="add_commitment_amount_header">AMOUNT (Required)</string>
    <string name="add_commitment_amount_hint">in default currency</string>
    <string name="add_commitment_delete_commitment_label">Delete Commitment</string>
    <string name="menu_title_coaching">Coaching</string>
    <string name="biometric_prompt">Use biometrics (fingerprint, retina, face) for future unlocks?</string>
    <string name="biometric_help">Your mobile unlock code will be required to enable biometric unlock which can be used</string>
    <string name="biometric_touch_sensor">Enter PIN and click confirm to enable biometric</string>
</resources>