<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/biometric_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:src="@drawable/cru_fingerprint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/biometric_touch_sensor"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/pin_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:minEms="4"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_biometric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_blue"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:elevation="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/double_progress_drawable"
        android:text="@string/confirm_pin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:text="@string/biometric_prompt"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/biometric_help"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/fingerprint_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fingerprint_skip"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</merge>
